# NoMake

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/lib/: args.rs  compile.rs  mod.rs
tests/: main.c  test.rs
