[package]
name = "nomake"
version = "0.1.0"
authors = ["Yufeng Ying<nbyyf2002@mail.ustc.edu.cn>"]
edition = "2018"
description = "simple C project manage tool."
documentation = "./src/doc.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.0"
walkdir = "2"