[package]
name = "nomake"
version = "0.1.1"
authors = ["Yufeng Ying<nbyyf2002@mail.ustc.edu.cn>"]
edition = "2018"
description = "simple C project manage tool."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib_nomake"
path = "src/lib/mod.rs"

[[bin]]
name = "nomake"
path = "src/main.rs"

[dependencies]
structopt = "0.3"
walkdir = "2"